--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -9,14 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Devoir4InterfaceVersionDave">
-        <activity android:name=".CategoriesResto">
+        <activity android:name=".Acceuil">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Acceuil"/>
+        <activity android:name=".CategoriesResto"/>
+        <activity android:name=".AcceuilPlusOption"/>
 
     </application>
 
